--- a/delete-account.html
+++ b/delete-account.html
@@ -2,21 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Account Deletion - Quizzy App</title>
+  <title>Account & Data Deletion – Quizzy App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #1a1a1a;
+    }
+    a {
+      color: #0077cc;
+    }
   </style>
 </head>
 <body>
-  <h1>Delete Your Quizzy Account</h1>
-  <p>If you wish to delete your account and associated data from the Quizzy – Online Quiz App, please send an email to <a href="mailto:suranimayank44@gmail.com">suranimayank44@gmail.com</a> with the subject line: <strong>Account Deletion Request</strong>.</p>
-  <h2>What will be deleted?</h2>
+
+  <h1>Account and Data Deletion – Quizzy App</h1>
+
+  <p>This page explains how you can request the deletion of your account and personal data associated with the <strong>Quizzy – Online Quiz App</strong>, developed by <strong>Mayank Surani</strong>.</p>
+
+  <hr>
+
+  <h2>📩 Delete Your Account</h2>
+  <p>If you wish to permanently delete your account, including all personal data, please send an email to:</p>
+  <p>
+    <strong>Email:</strong> <a href="mailto:suranimayank44@gmail.com">suranimayank44@gmail.com</a><br>
+    <strong>Subject:</strong> Account Deletion Request
+  </p>
+  <p>Include your registered email address (if applicable) and any other relevant info. Your request will be processed within <strong>7 business days</strong>.</p>
+
+  <h3>Deleted data includes:</h3>
   <ul>
-    <li>Your account credentials (username, email)</li>
-    <li>Quiz scores or saved history</li>
-    <li>Any personal data associated with the app</li>
+    <li>Your login/account credentials (email, username)</li>
+    <li>Your quiz scores and progress history</li>
+    <li>Any personal profile data submitted</li>
   </ul>
-  <p>We will process your request within 7 business days. If you have any questions, feel free to contact us at the same email address.</p>
-  <p>This page is managed by Mayank Surani, developer of the Quizzy app.</p>
+
+  <hr>
+
+  <h2>🧹 Delete Your Data (Keep Account)</h2>
+  <p>If you'd prefer to keep your account but want specific data (e.g., quiz history) removed, you can also send a request via email:</p>
+  <p>
+    <strong>Email:</strong> <a href="mailto:suranimayank44@gmail.com">suranimayank44@gmail.com</a><br>
+    <strong>Subject:</strong> Data Deletion Request (No Account Removal)
+  </p>
+  <p>Specify what data you'd like us to remove. We'll respond within <strong>7 business days</strong>.</p>
+
+  <hr>
+
+  <h2>🔐 Data Retention & Security</h2>
+  <p>Your personal information is never shared with third parties and is handled in accordance with our <a href="https://mynks44.github.io/quizzy-policy/quizzy.html" target="_blank">Privacy Policy</a>.</p>
+
+  <p>If you have any questions or concerns, feel free to email us at <a href="mailto:suranimayank44@gmail.com">suranimayank44@gmail.com</a>.</p>
+
+  <p><em>Last updated: May 19, 2025</em></p>
+
 </body>
 </html>
