screenshots removed + mail updated

--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
       margin-top: 20px;
       display: inline-block;
     }
-    .screenshot {
-      margin-top: 30px;
-      width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
     footer {
       background-color: #eee;
       padding: 20px;
@@ -65,17 +59,13 @@
   <div class="content">
     <p>Quizzy is a modern mobile app designed to challenge your knowledge across multiple categories in a fun, intuitive way.</p>
 
-    <img src="https://via.placeholder.com/300x600.png?text=App+Screenshot" class="screenshot" alt="Quizzy Screenshot"/>
-
-    <br/>
-
     <a href="https://play.google.com/store/apps/details?id=com.quizzyonline.app" class="btn" target="_blank">
       Download on Google Play
     </a>
   </div>
 
   <footer>
-    Contact us at <a href="mailto:quizzyapp@gmail.com">quizzyapp@gmail.com</a>
+    Contact us at <a href="mailto:mayanksurani2004@gmail.com">mayanksurani2004@gmail.com</a>
   </footer>
 
 </body>
