--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <footer>
-    Contact us at <a href="mailto:mayanksurani2004@gmail.com">mayanksurani2004@gmail.com</a>
+    Contact us at <a href="mailto:quizzyonlinequiz@gmail.com">quizzyonlinequiz@gmail.com</a>
   </footer>
 
 </body>
